--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -659,9 +659,11 @@ ul li:not(.active) {
 .modal {
   display: none;
   background: #F8F9FB;
-  padding: 6vh 5rem 4vh 4.95rem;
+  padding: 7vh 5rem 4vh 4.95rem;
   width: 100%;
-
+  @media screen and (max-height: 750px){
+    height: 3vh;
+  }
   &__nav {
     max-height: 5.8vh;
     height: 100%;
@@ -725,7 +727,7 @@ ul li:not(.active) {
 
   &__steps {
     display: flex;
-    margin-top: 7vh;
+    margin-top: 8vh;
     margin-left: 0.13rem
   }
 
@@ -787,8 +789,9 @@ ul li:not(.active) {
     position: relative;
     max-width: 28.2%;
 
-    height: 25vh;
+    height: 27.5vh;
     width: 100%;
+    min-height: 10rem;
 
     background-color: #F5F5F5;
     background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill: none; stroke: rgba(196,196,196, 0.8); stroke-width: 4; stroke-dasharray: 10 12'/></svg>");
@@ -837,12 +840,12 @@ ul li:not(.active) {
   }
 
   &__add-photo {
-    margin-top: 5.95vh;
+    margin-top: 6.6vh;
     letter-spacing: -.06rem;
   }
 
   &__form {
-    margin-top: 6vh;
+    margin-top: 6.6vh;
 
     h1 {
       letter-spacing: -.06rem;
@@ -850,7 +853,7 @@ ul li:not(.active) {
   }
 
   &__inputs {
-    margin-top: 3vh;
+    margin-top: 3.5vh;
     margin-left: .1rem;
     display: flex;
     justify-content: space-between;
@@ -862,7 +865,7 @@ ul li:not(.active) {
   }
 
   &__input-wrapper &__input-data {
-    height: 7vh;
+    height: 7.6vh;
     min-height: 3.3rem;
     width: 100%;
     position: relative;
